# PWR

./: .gitignore  README.md  notatki.md
bi/: L1.ipynb  Lab1-Raport-1.odt  Notebook-1.ipynb  ex1.csv  ex1.py  res.csv
bi/etl/: ETL.ipynb  all.ipynb  etl_2.ipynb  etl_tools.py  test.ipynb
big_data/: L1.py  L2.py  L2_E3.py  l5.py  l6.py  notatki.md
big_data/l3/: Cargo.toml  README.md
big_data/l4/: Cargo.toml
ick/: main.py
ick/liniakomend/: tableroute.py
iot/l2/: client.py  docker_setup.sh  main.py  package-lock.json  package.json  server.py  tmp_getter.js
iot/l3/: .env_sample  .gitignore  Dockerfile  launch.sh  requirements.txt
iot/l3/decisionmaking/: Cargo.toml
iot/l3/decisionmaking/src/: config.json  main.rs  server.rs  steering.py  test.py
opt/: main.py
optymalizacja/: main.py
ppd/hello_world/: Cargo.toml
ppd/lists/: L1E1.mod  L1E1CD.mod  L1E2.mod  L1E3.mod  L1E4.mod  L2E1.mod  chujmnieto.mod  cuba.mod  lists.mod  sample.mod
projektowanie_algorytmow/: L9.py  ex5.json  l1.py  l2.py  l3.py  lista_6.ipynb
sbd/: 266493_L10.txt  266493_L11.sql  266493_L12.sql  266493_L3.sql  266493_L4.sql  266493_L5.sql  266493_L6.sql  266493_L9.md  dane.sql  lista9 sbd.txt  mongo.txt  restaurants.json
strumienie_danych/: l1.py  l2.py  l3.py  l4.py  l5.py  l6.py  l7.py  l8.py  l9.py  l9_2nd_app.py  test.py  tests.py
symulacja_komputerowa/: drone.py  prep_routes.py  symulacja_dron.ipynb
systemy_autonomiczne/: L1E2.asm  L1E3.asm  L1E4.asm  L1E4v2.asm  L1E5.asm  L1E5V3.asm  L1E5v2_copy.asm   mainconfig.pzw
sztuczna_inteligencja/: getyesno.pl  main.pl
(+105 files in other folders)
